--- a/app/index.css
+++ b/app/index.css
@@ -14,7 +14,7 @@ body{
     display: flex;
     position: absolute;
     width:100%;
-    height:100%;
+    height:fit-content;
     flex-wrap: wrap;
 }
 
@@ -48,7 +48,8 @@ progress{
 .file:hover{
     background: rgb(230, 229, 229);
     overflow:visible;
-    height: 100%;
+    min-height:50px;
+    height:fit-content;
     width:100px;
     min-height: 100px;
     transition-duration: 1s;
